config_firefox_base: fix invisible toolbar icons
firefox-esr moved from 115 to 128 which now uses
image-sets to automatically apply high-res 2x icons
on HiDPI displays, breaking this hack..

c.f. https://phabricator.services.mozilla.com/D188407
    "Simplify webextension toolbar icons" Sep 16 2023

> Any idea how to force the browser to use the 2x entry of the
> image-set?

There's no way, because of how image-set works.

--- a/features/config_firefox_base/user-config/.mozilla/firefox/fsfw1234.default/chrome/chrome/toolbar_icons_hover_zoom.css
+++ b/features/config_firefox_base/user-config/.mozilla/firefox/fsfw1234.default/chrome/chrome/toolbar_icons_hover_zoom.css
@@ -46,12 +46,3 @@ toolbar[brighttext]#nav-bar .toolbarbutton-1[open="true"] > .toolbarbutton-icon 
   filter: drop-shadow(0 0 2px white) drop-shadow(0 0 1px white);
   scale: 1.4;
 }
-
-/* Use higher resolution extension icons */
-toolbar[brighttext] .webextension-browser-action {
-  list-style-image: var(--webextension-toolbar-image-2x-light, inherit) !important;
-}
-
-toolbar:not([brighttext]) .webextension-browser-action {
-  list-style-image: var(--webextension-toolbar-image-2x-dark, inherit) !important;
-}
